service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: dev-ui
spec:
  type: NodePort # Changed from ClusterIP
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 32000 # This opens a dedicated port on localhost
